tests/ui/const-generics/generic_const_parameter_types/lifetime_dependent_const_param.stderr
error: anonymous constants with lifetimes in their type are not yet supported
  --> $DIR/lifetime_dependent_const_param.rs:7:20
   |
LL |     foo::<'static, { &1_u32 }>();
   |                    ^^^^^^^^^^

error: anonymous constants with lifetimes in their type are not yet supported
  --> $DIR/lifetime_dependent_const_param.rs:9:15
   |
LL |     foo::<'_, { &1_u32 }>();
   |               ^^^^^^^^^^

error: lifetime may not live long enough
  --> $DIR/lifetime_dependent_const_param.rs:15:5
   |
LL | fn borrowck<'a, const N: &'static u32, const M: &'a u32>() {
   |             -- lifetime `'a` defined here
LL |     foo::<'a, M>();
LL |     foo::<'static, M>();
   |     ^^^^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`

error: aborting due to 3 previous errors

